# raytracer-ocaml

./: .gitignore  LICENSE  README.md  dune-project  raytracer.opam
lib/: camera.ml  dune  mod.ml  pixel.ml  ray.ml  raytracer.ml  v.ml  vec.ml
test/: dune
